--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <!-- Footer -->
   <footer class="bg-gradient-to-r from-18181B via-331029 to-18181B p-4 text-center text-white">
-    <p>&copy; 2025 BookVerse. All rights reserved.</p>
+    <p>&copy; 2025 BookVerse. All rights reserved to the creator MuGaw.</p>
     <p>Made with <span class="heart-icon">❤</span></p>
   </footer>
 
